--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "traffic-dashboard-functions",
+  "description": "Cloud Functions for Traffic Dashboard",
+  "version": "1.0.0",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -9,13 +10,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
