--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,8 @@
       ".git",
       "firebase-debug.log",
       "firebase-debug.*.log"
-    ]
+    ],
+    "region": "europe-west1"
   },
   "firestore": {
     "rules": "firestore.rules",
