--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
